--- a/index.html
+++ b/index.html
@@ -142,10 +142,14 @@
 
     </header>
 
+
+    <!-- hero section ------------------------------------------------------------------------------ -->
+     
+
     <section>
         <div id="hero_section">
             <div id="hero_left_section">
-                <div id="hero_content">
+                <div id="hero_content" class="scroll-reveal">
                     <span class="collection">New Collection 2025</span>
                     <h1>Discover Stylish <span id="fashion">Fashion</span> For Every Season</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
@@ -171,25 +175,61 @@
 
 
             <div id="hero_right_section">
-                <img src="assets\images\product-f-9.webp" id="ladyimg">
-                 <div id="productimginfo1" class="productimginfo">
+                <img src="assets\images\product-f-9.webp" class="scroll-reveal" id="ladyimg">
+                <div id="productimginfo1" class="productimginfo">
                     <img src="assets\images\product-4.webp">
-                    <div id="product_info1" class="product_info ">
+                    <div id="product_info1" class="product_info">
                         <h4>Summer Collection</h4>
                         <span class="price">$89.99</span>
                     </div>
-                 </div>
-                  <div id="productimginfo2" class="productimginfo">
+                </div>
+                <div id="productimginfo2" class="productimginfo" class="scroll-reveal">
                     <img src="assets\images\product-3.webp">
                     <div id="product_info2" class="product_info">
                         <h4>Casual Wear</h4>
                         <span class="price">$59.99</span>
                     </div>
-                 </div>
-                 <div id="circle_off">
+                </div>
+                <div id="circle_off" class="scroll-reveal">
                     <span class="percent">30%</span>
                     <span class="text">OFF</span>
-                 </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div id="card_main_section">
+            <div id="fourcard_section" class="scroll-reveal">
+                <div id="card1" class="card">
+                    <i class="bi bi-truck"></i>
+                    <h3>Free Shipping</h3>
+                    <p>Nulla sit morbi vestibulum eros duis amet,
+                        consectetur vitae lacus. Ut quis tempor felis
+                        sed nunc
+                        viverra.</p>
+                </div>
+                 <div id="card2" class="card">
+                    <i class="bi bi-piggy-bank"></i>
+                    <h3>Money Back Guarantee</h3>
+                    <p>Nullam gravida felis ac nunc tincidunt, 
+                        sed malesuada justo pulvinar. Vestibulum nec diam 
+                        vitae eros.</p>
+                </div>
+                 <div id="card3" class="card">
+                    <i class="bi bi-percent"></i>
+                    <h3>Discount Offers</h3>
+                    <p>Nulla ipsum nisi vel adipiscing amet, dignissim consectetur 
+                        ornare. Vestibulum quis posuere elit auctor.</p>
+                </div>
+                 <div id="card4" class="card">
+                    <i class="bi bi-headset"></i>
+                    <h3>24/7 Support</h3>
+                    <p>Ipsum dolor amet sit consectetur adipiscing, 
+                        nullam vitae euismod tempor nunc felis vestibulum
+                         ornare.</p>
+                </div>
             </div>
         </div>
     </section>
