--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 
     <!-- hero section ------------------------------------------------------------------------------ -->
-     
+
 
     <section>
         <div id="hero_section">
@@ -199,6 +199,11 @@
     </section>
 
 
+
+
+    <!-- card section --------------------------------------------------------------------------- -->
+
+
     <section>
         <div id="card_main_section">
             <div id="fourcard_section" class="scroll-reveal">
@@ -210,28 +215,110 @@
                         sed nunc
                         viverra.</p>
                 </div>
-                 <div id="card2" class="card">
+                <div id="card2" class="card">
                     <i class="bi bi-piggy-bank"></i>
                     <h3>Money Back Guarantee</h3>
-                    <p>Nullam gravida felis ac nunc tincidunt, 
-                        sed malesuada justo pulvinar. Vestibulum nec diam 
+                    <p>Nullam gravida felis ac nunc tincidunt,
+                        sed malesuada justo pulvinar. Vestibulum nec diam
                         vitae eros.</p>
                 </div>
-                 <div id="card3" class="card">
+                <div id="card3" class="card">
                     <i class="bi bi-percent"></i>
                     <h3>Discount Offers</h3>
-                    <p>Nulla ipsum nisi vel adipiscing amet, dignissim consectetur 
+                    <p>Nulla ipsum nisi vel adipiscing amet, dignissim consectetur
                         ornare. Vestibulum quis posuere elit auctor.</p>
                 </div>
-                 <div id="card4" class="card">
+                <div id="card4" class="card">
                     <i class="bi bi-headset"></i>
                     <h3>24/7 Support</h3>
-                    <p>Ipsum dolor amet sit consectetur adipiscing, 
+                    <p>Ipsum dolor amet sit consectetur adipiscing,
                         nullam vitae euismod tempor nunc felis vestibulum
-                         ornare.</p>
+                        ornare.</p>
                 </div>
             </div>
         </div>
+    </section>
+
+
+
+    <!--  category section swiper  ------------------------------------------------------------------------------------------->
+
+
+    <section>
+        <div id="category_swiper_section">
+            <div class="swiper categorySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide cat_box">
+                        <div class="cat_img">
+                            <img src="assets\images\product-f-1.webp">
+                        </div>
+                        <div class="cat_info">
+                            <h3 class="category-title">Maecenas nec</h3>
+                            <p class="category-count">4 Products</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide cat_box">
+                        <div class="cat_img">
+                            <img src="assets\images\product-4.webp">
+                        </div>
+                        <div class="cat_info">
+                            <h3 class="category-title">Maecenas nec</h3>
+                            <p class="category-count">4 Products</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide cat_box">
+                        <div class="cat_img">
+                            <img src="assets\images\product-m-1.webp">
+                        </div>
+                        <div class="cat_info">
+                            <h3 class="category-title">Maecenas nec</h3>
+                            <p class="category-count">4 Products</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide cat_box">
+                        <div class="cat_img">
+                            <img src="assets\images\product-m-4.webp">
+                        </div>
+                        <div class="cat_info">
+                            <h3 class="category-title">Maecenas nec</h3>
+                            <p class="category-count">4 Products</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide cat_box">
+                        <div class="cat_img">
+                            <img src="assets\images\product-10.webp">
+                        </div>
+                        <div class="cat_info">
+                            <h3 class="category-title">Maecenas nec</h3>
+                            <p class="category-count">4 Products</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide cat_box">
+                        <div class="cat_img">
+                            <img src="assets\images\product-11.webp">
+                        </div>
+                        <div class="cat_info">
+                            <h3 class="category-title">Maecenas nec</h3>
+                            <p class="category-count">4 Products</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide cat_box">
+                        <div class="cat_img">
+                            <img src="assets\images\product-12.webp">
+                        </div>
+                        <div class="cat_info">
+                            <h3 class="category-title">Maecenas nec</h3>
+                            <p class="category-count">4 Products</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+
+        </div>
+
+
     </section>
 
 
