--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
 
     <section>
-        <div id="category_swiper_section">
+        <div id="category_swiper_section" class="scroll-reveal">
             <div class="swiper categorySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide cat_box">
@@ -317,6 +317,218 @@
             </div>
 
         </div>
+
+
+    </section>
+
+
+    <!-- Best Sellers Section ------------------------------------------------------------------------------------------------------------------------------- -->
+
+
+    <section>
+        <div id="best_seller_section">
+            <div id="best_heading_section">
+                <h2>Best Sellers</h2>
+                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+
+            </div>
+
+            <!-- ye ek product he pura  -->
+            <div id="best_fourproduct_section" class="scroll-reveal">
+            <div id="best_product_section">
+                <div class="product1 products">
+                    <img src="assets/images/product-1.webp" class="default_product" alt="product1">
+                    <img src="assets/images/product-1-variant.webp" class="hover_product1 hover_product"
+                        alt="hover_product1">
+                </div>
+                <div class="product_tag">
+                    <span class="new_tag">New</span>
+                </div>
+                <div class="product_actions">
+                    <button class="heart_icon button" type="button">
+                        <i class="bi bi-heart"></i>
+                    </button>
+                    <button class="eye_icon button" type="button">
+                        <i class="bi bi-eye"></i>
+                    </button>
+                </div>
+
+                <div class="product_info">
+                    <div class="product_title">
+                        <h3><a href="product-details.html">Lorem ipsum dolor sit amet</a></h3>
+                    </div>
+
+                    <div class="product_price">
+                        <span class="current-price">$89.99</span>
+                    </div>
+                    <div class="product_rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <span class="rating-count">(42)</span>
+
+                    </div>
+                    <div class="cart_button_section">
+                        <button class="cart_button"><i class="bi bi-bag-plus me-2"></i>Add to Cart</button>
+                    </div>
+                </div>
+             </div>
+
+
+
+
+             <div id="best_product_section">
+                <div class="product1 products">
+                    <img src="assets/images/product-4.webp" class="default_product" alt="product1">
+                    <img src="assets/images/product-4-variant.webp" class="hover_product1 hover_product"
+                        alt="hover_product1">
+                </div>
+                <div class="product_tag">
+                    <span class="new_tag">New</span>
+                </div>
+                <div class="product_actions">
+                    <button class="heart_icon button" type="button">
+                        <i class="bi bi-heart"></i>
+                    </button>
+                    <button class="eye_icon button" type="button">
+                        <i class="bi bi-eye"></i>
+                    </button>
+                </div>
+
+                <div class="product_info">
+                    <div class="product_title">
+                        <h3><a href="product-details.html">Lorem ipsum dolor sit amet</a></h3>
+                    </div>
+
+                    <div class="product_price">
+                        <span class="current-price">$89.99</span>
+                    </div>
+                    <div class="product_rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <span class="rating-count">(42)</span>
+
+                    </div>
+                    <div class="cart_button_section">
+                        <button class="cart_button"><i class="bi bi-bag-plus me-2"></i>Add to Cart</button>
+                    </div>
+                </div>
+             </div>
+
+
+
+
+
+             <div id="best_product_section">
+                <div class="product1 products">
+                    <img src="assets/images/product-7.webp" class="default_product" alt="product1">
+                    <img src="assets/images/product-7-variant.webp" class="hover_product1 hover_product"
+                        alt="hover_product1">
+                </div>
+                <div class="product_tag">
+                    <span class="new_tag">New</span>
+                </div>
+                <div class="product_actions">
+                    <button class="heart_icon button" type="button">
+                        <i class="bi bi-heart"></i>
+                    </button>
+                    <button class="eye_icon button" type="button">
+                        <i class="bi bi-eye"></i>
+                    </button>
+                </div>
+
+                <div class="product_info">
+                    <div class="product_title">
+                        <h3><a href="product-details.html">Lorem ipsum dolor sit amet</a></h3>
+                    </div>
+
+                    <div class="product_price">
+                        <span class="current-price">$89.99</span>
+                    </div>
+                    <div class="product_rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <span class="rating-count">(42)</span>
+
+                    </div>
+                    <div class="cart_button_section">
+                        <button class="cart_button"><i class="bi bi-bag-plus me-2"></i>Add to Cart</button>
+                    </div>
+                </div>
+             </div>
+
+
+
+
+             <div id="best_product_section">
+                <div class="product1 products">
+                    <img src="assets/images/product-12.webp" class="default_product" alt="product1">
+                    <img src="assets/images/product-12-variant.webp" class="hover_product1 hover_product"
+                        alt="hover_product1">
+                </div>
+                <div class="product_tag">
+                    <span class="new_tag">New</span>
+                </div>
+                <div class="product_actions">
+                    <button class="heart_icon button" type="button">
+                        <i class="bi bi-heart"></i>
+                    </button>
+                    <button class="eye_icon button" type="button">
+                        <i class="bi bi-eye"></i>
+                    </button>
+                </div>
+
+                <div class="product_info">
+                    <div class="product_title">
+                        <h3><a href="product-details.html">Lorem ipsum dolor sit amet</a></h3>
+                    </div>
+
+                    <div class="product_price">
+                        <span class="current-price">$89.99</span>
+                    </div>
+                    <div class="product_rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                        <span class="rating-count">(42)</span>
+
+                    </div>
+                    <div class="cart_button_section">
+                        <button class="cart_button"><i class="bi bi-bag-plus me-2"></i>Add to Cart</button>
+                    </div>
+                </div>
+             </div>
+
+
+
+
+
+
+
+
+
+
+
+             </div>
+
+
+
+
+             
+        </div>
+
+
+
 
 
     </section>
