--- a/index.html
+++ b/index.html
@@ -1326,8 +1326,18 @@
                 </form>
             </div>
         </div>
+
+    </section>
+
+
+
+
+    <!-- Second Last Footer Section------------------------------------------------------------------------------------------------------------------------ -->
+
+    <section>
         
     </section>
+
 
 
 
