--- a/index.html
+++ b/index.html
@@ -1299,6 +1299,7 @@
 
 
             </div>
+
             <!-- view_all_product button  -->
             <div id="view_all_product_section">
                 <a href="#" class="view-all-btn">View All Products<i class="bi bi-arrow-right"></i></a>
@@ -1313,14 +1314,14 @@
 
 
     <section>
-        
+
         <div id="join_our_newsletter_section">
             <div class="join_content_section">
                 <h2>Join Our Newsletter</h2>
                 <p>Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.</p>
                 <form action="" method="">
                     <div class="newsletter_form_content">
-                        <input  id="input1" type="email" name="email" placeholder="Your email address" required="">
+                        <input id="input1" type="email" name="email" placeholder="Your email address" required="">
                         <button id="btn" type="submit">Subscribe</button>
                     </div>
                 </form>
@@ -1335,7 +1336,94 @@
     <!-- Second Last Footer Section------------------------------------------------------------------------------------------------------------------------ -->
 
     <section>
-        
+
+        <div id="second_last_footer_mainsection">
+            <div class="second_last_footer_container">
+                <div class="footer_section1">
+                    <a href="index.html" class="logo">eStore</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula, facilisis magna
+                        ut, consectetur lorem.</p>
+                    <div class="footer_contact_section">
+                        <div class="contact-item">
+                            <i class="bi bi-geo-alt"></i>
+                            <span>123 Fashion Street, New York, NY 10001</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="bi bi-telephone"></i>
+                            <span>+1 (555) 123-4567</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="bi bi-envelope"></i>
+                            <span>hello@example.com</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer_section2">
+                    <h4>Shop</h4>
+                    <ul>
+                        <li><a href="category.html">New Arrivals</a></li>
+                        <li><a href="category.html">Bestsellers</a></li>
+                        <li><a href="category.html">Women's Clothing</a></li>
+                        <li><a href="category.html">Men's Clothing</a></li>
+                        <li><a href="category.html">Accessories</a></li>
+                        <li><a href="category.html">Sale</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer_section3">
+                    <h4>Support</h4>
+                    <ul class="footer-links">
+                        <li><a href="support.html">Help Center</a></li>
+                        <li><a href="account.html">Order Status</a></li>
+                        <li><a href="shiping-info.html">Shipping Info</a></li>
+                        <li><a href="return-policy.html">Returns &amp; Exchanges</a></li>
+                        <li><a href="#">Size Guide</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="footer_section4">
+                    <h4>Company</h4>
+                    <ul class="footer-links">
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="about.html">Careers</a></li>
+                        <li><a href="about.html">Press</a></li>
+                        <li><a href="about.html">Affiliates</a></li>
+                        <li><a href="about.html">Responsibility</a></li>
+                        <li><a href="about.html">Investors</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer_section5">
+                    <h4>Download Our App</h4>
+                    <p>Shop on the go with our mobile app</p>
+                    <div class="footer-button_section">
+                        <a href="#" class="footer-btn">
+                            <i class="bi bi-apple"></i>
+                            <span>App Store</span>
+                        </a>
+                        <a href="#" class="footer-btn">
+                            <i class="bi bi-google-play"></i>
+                            <span>Google Play</span>
+                        </a>
+                    </div>
+                    <div class="social-links_section">
+                        <h5>Follow Us</h5>
+                        <div class="social-icons">
+                            <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                            <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                            <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
+                            <a href="#" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
+                            <a href="#" aria-label="Pinterest"><i class="bi bi-pinterest"></i></a>
+                            <a href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 
