--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,7 @@
 
                 <div class="footer_section3">
                     <h4>Support</h4>
-                    <ul class="footer-links">
+                    <ul>
                         <li><a href="support.html">Help Center</a></li>
                         <li><a href="account.html">Order Status</a></li>
                         <li><a href="shiping-info.html">Shipping Info</a></li>
@@ -1386,7 +1386,7 @@
 
                 <div class="footer_section4">
                     <h4>Company</h4>
-                    <ul class="footer-links">
+                    <ul>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="about.html">Careers</a></li>
                         <li><a href="about.html">Press</a></li>
@@ -1399,19 +1399,19 @@
                 <div class="footer_section5">
                     <h4>Download Our App</h4>
                     <p>Shop on the go with our mobile app</p>
-                    <div class="footer-button_section">
-                        <a href="#" class="footer-btn">
+                    <div class="footer_button_section">
+                        <a href="#" class="footer_btn">
                             <i class="bi bi-apple"></i>
                             <span>App Store</span>
                         </a>
-                        <a href="#" class="footer-btn">
+                        <a href="#" class="footer_btn">
                             <i class="bi bi-google-play"></i>
                             <span>Google Play</span>
                         </a>
                     </div>
-                    <div class="social-links_section">
+                    <div class="social_links_section">
                         <h5>Follow Us</h5>
-                        <div class="social-icons">
+                        <div class="social_icons">
                             <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
                             <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
                             <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
@@ -1425,6 +1425,8 @@
         </div>
 
     </section>
+
+    
 
 
 
