--- a/index.html
+++ b/index.html
@@ -1301,7 +1301,7 @@
             </div>
 
             <!-- view_all_product button  -->
-            <div id="view_all_product_section">
+            <div id="view_all_product_section" class="scroll-reveal">
                 <a href="#" class="view-all-btn">View All Products<i class="bi bi-arrow-right"></i></a>
             </div>
         </div>
@@ -1315,7 +1315,7 @@
 
     <section>
 
-        <div id="join_our_newsletter_section">
+        <div id="join_our_newsletter_section" class="scroll-reveal">
             <div class="join_content_section">
                 <h2>Join Our Newsletter</h2>
                 <p>Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.</p>
@@ -1338,7 +1338,7 @@
     <section>
 
         <div id="second_last_footer_mainsection">
-            <div class="second_last_footer_container">
+            <div class="second_last_footer_container" class="scroll-reveal">
                 <div class="footer_section1">
                     <a href="index.html" class="logo">eStore</a>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in nibh vehicula, facilisis magna
@@ -1426,8 +1426,37 @@
 
     </section>
 
-    
 
+    <section>
+
+        <div id="last_footer_main_section">
+            <div class="last_footer_container" class="scroll-reveal">
+                <div class="we_accept_section">
+                    <span>We Accept:</span>
+                    <div class="payment_icons">
+                        <i class="bi bi-credit-card" aria-label="Credit Card"></i>
+                        <i class="bi bi-paypal" aria-label="PayPal"></i>
+                        <i class="bi bi-apple" aria-label="Apple Pay"></i>
+                        <i class="bi bi-google" aria-label="Google Pay"></i>
+                        <i class="bi bi-shop" aria-label="Shop Pay"></i>
+                        <i class="bi bi-cash" aria-label="Cash on Delivery"></i>
+                    </div>
+                </div>
+                <div class="legal_links_section">
+                    <a href="tos.html">Terms of Service</a>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="tos.html">Cookies Settings</a>
+                </div>
+                <div class="copyright_section">
+                    <p>© <span>Copyright</span> <strong class="sitename">eStore</strong>. All Rights Reserved.</p>
+                </div>
+                <div class="credits_section">
+                     <a href="https://bootstrapmade.com/"><span>Designed by </span>Bharat Bhati</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 
 
